Make CORS config pattern-based to reliably allow Netlify origin